# requests-demo

./: pyproject.toml
tests/: test_basics.py  test_hooks.py  test_polling.py  test_requests_basics.py  test_retry.py
