[tool.poetry]
name = "requests-demo"
version = "0.1.0"
description = ""
authors = ["Gerrit Schrader <gerrit.schrader@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
polling = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
